{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 225,
  "lineage": "8b89229e-99f1-6d02-f45e-ec5e77fedc47",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:network-acl/acl-00c2bf57ac05cce4f",
            "default_network_acl_id": "acl-00c2bf57ac05cce4f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00c2bf57ac05cce4f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "535190967673",
            "subnet_ids": [
              "subnet-00e67d463c49b782f",
              "subnet-03455cdb77e9f2171",
              "subnet-055b14db99af2b724",
              "subnet-071fd5c15edb8032a",
              "subnet-0d5c9a93b5ca66414",
              "subnet-0e0b5cee978f40c94"
            ],
            "tags": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:route-table/rtb-0ef0af2acc7d36acf",
            "default_route_table_id": "rtb-0ef0af2acc7d36acf",
            "id": "rtb-0ef0af2acc7d36acf",
            "owner_id": "535190967673",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:security-group/sg-0f6f322a1fa9ad871",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f6f322a1fa9ad871",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "535190967673",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a137e7d1ad995db",
            "domain": "vpc",
            "id": "eipalloc-02a137e7d1ad995db",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-23-72-183.compute-1.amazonaws.com",
            "public_ip": "107.23.72.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "imersao-vpc-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04775abf8a570fea6",
            "domain": "vpc",
            "id": "eipalloc-04775abf8a570fea6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-197-146-184.compute-1.amazonaws.com",
            "public_ip": "54.197.146.184",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "imersao-vpc-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0292cdbeac5aca064",
            "domain": "vpc",
            "id": "eipalloc-0292cdbeac5aca064",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-24-163-48.compute-1.amazonaws.com",
            "public_ip": "100.24.163.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "imersao-vpc-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:internet-gateway/igw-0a0a2cc82af037a32",
            "id": "igw-0a0a2cc82af037a32",
            "owner_id": "535190967673",
            "tags": {
              "Name": "imersao-vpc",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a137e7d1ad995db",
            "association_id": "eipassoc-07cbe01ef20493b32",
            "connectivity_type": "public",
            "id": "nat-013a5ede14cc07b2f",
            "network_interface_id": "eni-0680830f86cd57371",
            "private_ip": "10.0.101.98",
            "public_ip": "107.23.72.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03455cdb77e9f2171",
            "tags": {
              "Name": "imersao-vpc-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04775abf8a570fea6",
            "association_id": "eipassoc-0ee370bcadc9fdc04",
            "connectivity_type": "public",
            "id": "nat-09316178c9cc113fe",
            "network_interface_id": "eni-09f3a0d319e8a35f4",
            "private_ip": "10.0.102.244",
            "public_ip": "54.197.146.184",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d5c9a93b5ca66414",
            "tags": {
              "Name": "imersao-vpc-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0292cdbeac5aca064",
            "association_id": "eipassoc-027c6b3cf037c3157",
            "connectivity_type": "public",
            "id": "nat-00b58f75dbd417d0f",
            "network_interface_id": "eni-08ad5e506dcbcee83",
            "private_ip": "10.0.103.192",
            "public_ip": "100.24.163.48",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00e67d463c49b782f",
            "tags": {
              "Name": "imersao-vpc-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c1fdf840ddb0fbc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-013a5ede14cc07b2f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1fdf840ddb0fbc1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d8f0c3bcb4ff5c781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09316178c9cc113fe",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d8f0c3bcb4ff5c78",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eebf7728b12c21c61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00b58f75dbd417d0f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eebf7728b12c21c6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a0a2cc82af037a32",
            "id": "r-rtb-0349e4e0a9a8829611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0349e4e0a9a882961",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:route-table/rtb-0c1fdf840ddb0fbc1",
            "id": "rtb-0c1fdf840ddb0fbc1",
            "owner_id": "535190967673",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "imersao-vpc-private-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:route-table/rtb-0d8f0c3bcb4ff5c78",
            "id": "rtb-0d8f0c3bcb4ff5c78",
            "owner_id": "535190967673",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "imersao-vpc-private-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:route-table/rtb-0eebf7728b12c21c6",
            "id": "rtb-0eebf7728b12c21c6",
            "owner_id": "535190967673",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "imersao-vpc-private-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:route-table/rtb-0349e4e0a9a882961",
            "id": "rtb-0349e4e0a9a882961",
            "owner_id": "535190967673",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "imersao-vpc-public",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-public",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b4c28184e435f6e",
            "route_table_id": "rtb-0c1fdf840ddb0fbc1",
            "subnet_id": "subnet-071fd5c15edb8032a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051223241c0c02b4e",
            "route_table_id": "rtb-0d8f0c3bcb4ff5c78",
            "subnet_id": "subnet-0e0b5cee978f40c94"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0825606351d09bc3d",
            "route_table_id": "rtb-0eebf7728b12c21c6",
            "subnet_id": "subnet-055b14db99af2b724"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2f1a670040b67eb",
            "route_table_id": "rtb-0349e4e0a9a882961",
            "subnet_id": "subnet-03455cdb77e9f2171"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d55e23d48516282e",
            "route_table_id": "rtb-0349e4e0a9a882961",
            "subnet_id": "subnet-0d5c9a93b5ca66414"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5ac5e157d581ce0",
            "route_table_id": "rtb-0349e4e0a9a882961",
            "subnet_id": "subnet-00e67d463c49b782f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:subnet/subnet-071fd5c15edb8032a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071fd5c15edb8032a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535190967673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-private-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:subnet/subnet-0e0b5cee978f40c94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0b5cee978f40c94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535190967673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-private-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:subnet/subnet-055b14db99af2b724",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055b14db99af2b724",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535190967673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-private-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:subnet/subnet-03455cdb77e9f2171",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03455cdb77e9f2171",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535190967673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-public-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-public-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:subnet/subnet-0d5c9a93b5ca66414",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5c9a93b5ca66414",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535190967673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-public-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-public-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:subnet/subnet-00e67d463c49b782f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e67d463c49b782f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535190967673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-public-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-public-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0deaff1f80da49352"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535190967673:vpc/vpc-0deaff1f80da49352",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c2bf57ac05cce4f",
            "default_route_table_id": "rtb-0ef0af2acc7d36acf",
            "default_security_group_id": "sg-0f6f322a1fa9ad871",
            "dhcp_options_id": "dopt-086e8251021d21583",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0deaff1f80da49352",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef0af2acc7d36acf",
            "owner_id": "535190967673",
            "tags": {
              "Name": "imersao-vpc",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc",
              "kubernetes.io/cluster/imersao-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}